--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
               <div class="col-xl-5 col-lg-5">
                 <!-- desc strat  -->
                 <p class="wow fadeInLeft" data-wow-delay=".4s">
-                  Únete ya y empieza a crear sin límites: tu sistema de
-                  postproducción está a punto de despegar.
+                  El backend que tú contenido necesita.
                 </p>
                 <!-- desc end  -->
               </div>
