--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <div class="col-xl-5 col-lg-5 text">
                 <!-- desc strat  -->
                 <p class="wow fadeInLeft" data-wow-delay=".4s">
-                  El backend que tú contenido necesita.
+                  La infraestructura que tu postproducción necesita.
                 </p>
                 <!-- desc end  -->
               </div>
